remove outdated files

--- a/HTML/5.element-types.html
+++ b/HTML/5.element-types.html
@@ -16,7 +16,7 @@
 
     <!-- TODO: inline-block -->
         <h2>Elements without closing tags</h2>
-        <img src="../../images/html5.png" alt="yt" />
+        <img src="../images/html5.png" alt="yt" />
         <br>
         <input type="text">
         <hr>
