--- a/HTML/7.forms.html
+++ b/HTML/7.forms.html
@@ -102,7 +102,7 @@
 
 
         <input type="submit" value="submit form">
-        <input type="image" src="../../images/html5.png">
+        <input type="image" src="../images/html5.png">
         <button>submit</button>
     </form>
     <button>do not submit</button>
